--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,7 @@
 cxf.version=3.3.2
 httpclient.version=4.5.8
 junit.version=4.12
+logback.version=1.2.3
 servlet.version=4.0.1
 slf4j.version=1.7.26
 spring.version=5.1.7.RELEASE
