--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,6 @@
 cxf.version=3.3.2
 httpclient.version=4.5.8
+jackson.version=2.9.9
 junit.version=4.12
 logback.version=1.2.3
 servlet.version=4.0.1
