--- a/gradle.properties
+++ b/gradle.properties
@@ -7,3 +7,4 @@ servlet.version=4.0.1
 slf4j.version=1.7.26
 spring.version=5.1.7.RELEASE
 spring-data.version=2.1.8.RELEASE
+spring-security.version=5.1.6.RELEASE
