--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+# Server Properties
 server.url=http://localhost:8888/api
+# Database Properties
+jdbc.driver=com.mysql.jdbc.Driver
+jdbc.url=jdbc:mysql://localhost:3306/exerceo
+jdbc.username=exerceo
+jdbc.password=An0dyz3d
