--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,11 @@
 cxf.version=3.3.2
 httpclient.version=4.5.8
 jackson.version=2.9.9
+jetbrains.version=17.0.0
 junit.version=4.12
 logback.version=1.2.3
 servlet.version=4.0.1
 slf4j.version=1.7.26
-spring.version=5.1.7.RELEASE
+spring.version=5.1.9.RELEASE
 spring-data.version=2.1.8.RELEASE
 spring-security.version=5.1.6.RELEASE
